--- a/Proto/.classpath
+++ b/Proto/.classpath
@@ -1,19 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-<<<<<<< HEAD
+	<classpathentry kind="src" path=""/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/ticka/git/Proto/Proto/json-simple-1.1.jar"/>
-=======
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="C:/Users/Luca/git/Proto/Proto/json-simple-1.1.jar"/>
-=======
-	<classpathentry kind="lib" path="C:/Users/Lenovo/source/repos/Proto_jo/Proto/json-simple-1.1.jar"/>
->>>>>>> branch 'master' of https://github.com/anna806/Proto.git
->>>>>>> branch 'master' of https://github.com/anna806/Proto.git
 	<classpathentry kind="output" path="bin"/>
 </classpath>
