--- a/Proto/.classpath
+++ b/Proto/.classpath
@@ -6,7 +6,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/ticka/git/Proto/json-simple-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Lenovo/source/repos/Proto_jo/json-simple-1.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/javaFX"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
