--- a/Proto/.classpath
+++ b/Proto/.classpath
@@ -1,33 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="src" path=""/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/javaFX">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-<<<<<<< HEAD
 	<classpathentry kind="lib" path="C:/Users/ticka/git/Proto/json-simple-1.1.jar"/>
-=======
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="C:/Users/Luca/git/Proto/Proto/json-simple-1.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/Luca/git/Proto/openjfx-15_windows-x64_bin-sdk/javafx-sdk-15"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-16/lib/javafx.base.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-16/lib/javafx.controls.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-16/lib/javafx.fxml.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-16/lib/javafx.graphics.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-16/lib/javafx.media.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-16/lib/javafx.swing.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-16/lib/javafx.web.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-16/lib/javafx-swt.jar"/>
-=======
-	<classpathentry kind="lib" path="C:/Users/Lenovo/source/repos/Proto_jo/json-simple-1.1.jar"/>
->>>>>>> branch 'master' of https://github.com/anna806/Proto.git
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX"/>
->>>>>>> branch 'master' of https://github.com/anna806/Proto.git
 	<classpathentry kind="output" path="bin"/>
 </classpath>
