--- a/.classpath
+++ b/.classpath
@@ -1,21 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="Comparator/src"/>
 	<classpathentry kind="src" path="Proto/src/grafika"/>
 	<classpathentry kind="src" path="Proto/src/proto"/>
-	<classpathentry kind="src" path="Tester/src"/>
-	<classpathentry kind="lib" path="comparator.jar"/>
-	<classpathentry kind="lib" path="json-simple-1.1.jar"/>
-	<classpathentry kind="lib" path="openjfx-15_windows-x64_bin-sdk/javafx-sdk-15/lib/javafx-swt.jar"/>
-	<classpathentry kind="lib" path="openjfx-15_windows-x64_bin-sdk/javafx-sdk-15/lib/javafx.base.jar"/>
 	<classpathentry kind="lib" path="openjfx-15_windows-x64_bin-sdk/javafx-sdk-15/lib/javafx.controls.jar"/>
 	<classpathentry kind="lib" path="openjfx-15_windows-x64_bin-sdk/javafx-sdk-15/lib/javafx.fxml.jar"/>
-	<classpathentry kind="lib" path="openjfx-15_windows-x64_bin-sdk/javafx-sdk-15/lib/javafx.graphics.jar"/>
-	<classpathentry kind="lib" path="openjfx-15_windows-x64_bin-sdk/javafx-sdk-15/lib/javafx.media.jar"/>
-	<classpathentry kind="lib" path="openjfx-15_windows-x64_bin-sdk/javafx-sdk-15/lib/javafx.swing.jar"/>
-	<classpathentry kind="lib" path="openjfx-15_windows-x64_bin-sdk/javafx-sdk-15/lib/javafx.web.jar"/>
-	<classpathentry kind="lib" path="proto.jar"/>
-	<classpathentry kind="lib" path="Proto/json-simple-1.1.jar"/>
 	<classpathentry kind="output" path="Comparator/bin"/>
 </classpath>
