--- a/Proto/.classpath
+++ b/Proto/.classpath
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/javaFX">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-<<<<<<< HEAD
 	<classpathentry kind="lib" path="C:/Users/ticka/git/Proto/json-simple-1.1.jar"/>
-=======
-	<classpathentry kind="lib" path="C:/Users/Lenovo/source/repos/Proto_jo/json-simple-1.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX"/>
->>>>>>> branch 'master' of https://github.com/anna806/Proto.git
 	<classpathentry kind="output" path="bin"/>
 </classpath>
