--- a/Proto/.classpath
+++ b/Proto/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path=""/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/Luca/git/Proto/openjfx-15_windows-x64_bin-sdk/javafx-sdk-15/lib/javafx.base.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Luca/git/Proto/openjfx-15_windows-x64_bin-sdk/javafx-sdk-15/lib/javafx.controls.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Luca/git/Proto/openjfx-15_windows-x64_bin-sdk/javafx-sdk-15/lib/javafx.fxml.jar"/>
